@@ -1,16 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
+DIST scikit-image-0.7.2.tar.gz 4453107 SHA256 dad28ba772ccd1ddf70a72c3ecfbf27eb1a7ddf7b2e46e2ce567fc0c6b603931 SHA512 c8a21d1bdf57d17bce211aee6e3705e6a6e3682fc73d8369fcee5bb8e5f6b985c022624f51bd95cf87d125a545a447f7bfc0b533a4bcd48708a3e551bc8a82cf WHIRLPOOL d6f5042d33bad804aafc4dd0ecb16fed13b4b88b1e2a215e052e1014503395b37c945af0ec0e048977af9d0c3179113811031dbc3a3dddc0f4bafc8cf7dea1a8
 DIST scikits-image-0.5.tar.gz 3298989 SHA256 caf0e8557fb0f4b71b8a70c44f5bd58867deb4205ff45e268dff18e29ad49f03
 DIST scikits-image-0.6.tar.gz 3525312 SHA256 f17f6a83329dd2a02ddb0224255e4a37d816f92764ef1934365925a81184f3b3 SHA512 80d5ea7fa4a35ae468a7746536f5ee2508cd241b633a51277a913940418e457277934239130b5ea05707f627ad215894a685f756c3e507bfdbc098cfe21a71b6 WHIRLPOOL a408c26b296a976c04d7030172d1e84e68d5fdcbeb4ec4918286613bae31f149113e0f5999881f1960803b0cf19f5a9f0213055190884937172dddfb41bcf31b
 EBUILD scikits_image-0.5.ebuild 1394 SHA256 ae4fb263afaa6269e9f29d2b8050cca24dd48d7678c54583c9bfb1f2f737f47b SHA512 74fbc8034fbd9d220e937db94dd5e369263223a8416256d2b6d19528cf23eb0c43f5fce446bbbccf976dd5f6bd2e183e0c3bf1c5de79840e5aeaf3c80dc41205 WHIRLPOOL 265e9cf2539958c3e7657471bb7707da5e4052f5cde628d7ba7eb89e0dc741ad1788cb818163b5145b82dc14d6048028f335a8a6940110c0eed097ecb60b24a5
 EBUILD scikits_image-0.6.ebuild 1418 SHA256 42e963de145b3d1119ccbb261a07b28a0d240aa2972fb6ccef506be341c978d2 SHA512 5f2645e255d99d757aee358b9e3b8882f7ce185e2fe86814a0096bb1ac542607052573334aca6cf9c297bfb604ef3b071f2f4ea1a16b23c92b6701ce33e91fe5 WHIRLPOOL 3627ee6121a8edb88e1640e98696a1b93fd61829c39c68263b9ff4875097fbfd70e23c433994807a5e5ea77ee7916a4730d590f89e811370e6873efe7884e24a
-MISC ChangeLog 1572 SHA256 ed6707681d72719ff0028a44889c6dc6b4ff5e4479a5426dafd9aa106be09341 SHA512 c89d044f6809a4f6410fd7dd9580dffe0879dcfec30615f2f107022515ed223f9b49794bb91aab1aaca7378b0c62dec2650d0f7f53b73841e814972889ece26e WHIRLPOOL 2ca9948d9f0c135443c8c38a5b851d4ce36c36849149f96158c3edcf59351379597f2b73c4cd02dc3b806cc97f755573d7e49d6da2468a0f0d6ab802bc807f09
+EBUILD scikits_image-0.7.2.ebuild 1414 SHA256 c3911bc44baf4d6d06139fd1449d3281ff73c857adc5a84f37c366eb945dee82 SHA512 d49e1273e0d854d29c8c3693a96a06c18080ea2f6b04d47fe3957dd064bafde2e50d1403849c6f12315886426532ae99ad9778388dd1802a9f08751575ad8120 WHIRLPOOL 437b177fa0f9794da0f1f559a968baab96ceed749bc672f35a7d613fb7f5ccc55718e6ac9dd25024decfb4968918d49088a7c32961fd7b82a3eee9c5a28f34e0
+MISC ChangeLog 1710 SHA256 5890bd6de266c27d15c9ac976842d327f929e6954084cf710a35a09c2cef7ac6 SHA512 4a9f808adb4b0bf3c06b37d48e1e12878de4732a94092f85f8e47a1cfb92749c50e5ce09ef6da217ca6fadd775a772a805e2779fc9e6a948951ca64c9f4f298e WHIRLPOOL d143d9c23995b0430ecf3c694726bcdab0ad00d0ecd00ba3ccf9b59bf188f1700f568dd22333c2161b8c7634024d260f6ac93f319e3f8f92e699d4d7a785bac7
 MISC metadata.xml 507 SHA256 09965e56692663d193d977b397a7a52f4495122a9ae09867e805ed94171e9f62 SHA512 f63b6e74ef0b47bf0909066efc004928e2e43c9a3fe0217d189c96823e28666a3942c6ff02237e99fac541ff746677e78626a6c9d416f33ec5f6a41b3e486ca9 WHIRLPOOL bf53b2be4135d9ccaf3a7d909720d0cc190866faa64e958811bdb4c2409f79f3a870e456d83a68c90871570dd9d660d590e57a53fdfe177a9ce341de8a653959
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAk/7CdEACgkQ1ycZbhPLE2DzqwCcDus28Jm3UmwGfUdkKD4YOcLZ
-IiAAnikWgPvnkV9ZrG6HPAKMvM5yUIdA
-=heWm
+iEYEAREIAAYFAlCOcX8ACgkQ1ycZbhPLE2CXHQCePE9cG5c5+BsFSQ2xwaMU8zVP
+FTkAn2r85Rje4WO4zjaK9hVrF8xA2kwn
+=frqS
 -----END PGP SIGNATURE-----
