@@ -1,6 +1,12 @@
 # ChangeLog for sci-libs/scikits_image
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/scikits_image/ChangeLog,v 1.6 2012/07/09 16:41:41 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/scikits_image/ChangeLog,v 1.7 2012/10/29 12:07:24 bicatali Exp $
+
+*scikits_image-0.7.2 (29 Oct 2012)
+
+  29 Oct 2012; Sébastien Fabbro <bicatali@gentoo.org>
+  +scikits_image-0.7.2.ebuild:
+  Version bump
 
 *scikits_image-0.6 (09 Jul 2012)
 
